# mubert-cli

./: Cargo.toml  README.md  ip_onchain_metadata.scale
examples/: create_entity.json  create_entity_no_upload.json
src/: api.rs  create_authority.rs  foreign_request.rs  lib.rs  main.rs  update_ip.rs
